--- a/kubernetes/base/quota/README
+++ b/kubernetes/base/quota/README
@@ -25,4 +25,5 @@ kubectl get resourcequotas -n quota-test-ns
 kubectl describe resourcequotas -n quota-test-ns
 kubectl describe quota -n quota-test-ns
 
+kubectl apply -f priority_*.yaml
 kubectl apply -f pod_v3.yaml
