--- a/kubernetes/devops/README
+++ b/kubernetes/devops/README
@@ -57,6 +57,12 @@ helm install my-k8s-dashboard k8s-dashboard/kubernetes-dashboard --set=service.e
 helm repo add k8s-dashboard https://kubernetes.github.io/dashboard
 helm install my-k8s-dashboard k8s-dashboard/kubernetes-dashboard --version 2.3.0
 
+helm show all k8s-dashboard/kubernetes-dashboard
+helm status my-k8s-dashboard
+
 export POD_NAME=$(kubectl get pods -n default -l "app.kubernetes.io/name=kubernetes-dashboard,app.kubernetes.io/instance=my-k8s-dashboard" -o jsonpath="{.items[0].metadata.name}")
-echo https://127.0.0.1:8443/
-kubectl -n default port-forward $POD_NAME 8443:8443
+kubectl port-forward --address 0.0.0.0 $POD_NAME 8443:8443
+
+kubectl describe secret $(kubectl get secret | grep my-k8s-dashboard-kubernetes-dashboard | awk '{print $1}')
+
+kubectl describe secrets my-k8s-dashboard-kubernetes-dashboard-token-w6n5p
