--- a/kubernetes/devops/README
+++ b/kubernetes/devops/README
@@ -49,7 +49,7 @@ docker pull harbor.pear.com:30159/library/busybox:v1
 
 2.Kubernetes Dashboard
 kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.0.4/aio/deploy/recommended.yaml
-kubectl proxy
+kubectl proxy --address='0.0.0.0'  --accept-hosts='^*$'
 http://localhost:8001/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/
 
 helm install my-k8s-dashboard k8s-dashboard/kubernetes-dashboard --set=service.externalPort=8080,resources.limits.cpu=200m
