--- a/kubernetes/devops/README
+++ b/kubernetes/devops/README
@@ -89,3 +89,15 @@ kubectl describe secret $(kubectl get secret | grep admin-user | awk '{print $1}
 
 kubectl delete serviceaccount admin-user
 kubectl delete clusterrolebinding admin-user
+
+3.Prometheus
+helm install my-prometheus-test stable/prometheus
+
+export POD_NAME=$(kubectl get pods --namespace default -l "app=prometheus,component=server" -o jsonpath="{.items[0].metadata.name}")
+kubectl --namespace default port-forward $POD_NAME 9090
+
+export POD_NAME=$(kubectl get pods --namespace default -l "app=prometheus,component=alertmanager" -o jsonpath="{.items[0].metadata.name}")
+kubectl --namespace default port-forward $POD_NAME 9093
+
+export POD_NAME=$(kubectl get pods --namespace default -l "app=prometheus,component=pushgateway" -o jsonpath="{.items[0].metadata.name}")
+kubectl --namespace default port-forward $POD_NAME 9091
